Fix linting warnings in Multi Select (#2080)

--- a/packages/design-system/ui/components/multi-select/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/multi-select/flavors/base/_index.scss
@@ -58,9 +58,8 @@
 }
 
 .slds-picklist__options {
-  border: $border-width-thin solid $color-border-input {
-    radius: $border-radius-medium;
-  };
+  border: $border-width-thin solid $color-border-input;
+  border-radius: $border-radius-medium;
   padding: $spacing-xx-small 0;
   width: $size-small;
   height: $size-small;
