--- a/packages/design-system/ui/touch/menus/flavors/action-overflow/_index.scss
+++ b/packages/design-system/ui/touch/menus/flavors/action-overflow/_index.scss
@@ -20,9 +20,8 @@
 
   &__content {
     padding-top: 33.33333333333333%;
-    overflow: hidden {
-      y: auto;
-    }
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   &__body {
