--- a/packages/design-system/ui/utilities/scrollable/flavors/vertical/_index.scss
+++ b/packages/design-system/ui/utilities/scrollable/flavors/vertical/_index.scss
@@ -12,7 +12,6 @@
 .slds-scrollable--y {
   @include enable-ios-momentum-scrolling;
   max-height: 100%;
-  overflow: hidden {
-    y: auto;
-  };
+  overflow: hidden;
+  overflow-y: auto;
 }
