--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -120,6 +120,10 @@
   // App Launcher
   'app-launcher/index',
 
+  // Hero Buttons
+  'hero-buttons/flavors/base/index',
+  'hero-buttons/flavors/link/index',
+
   // Pills
   'pills/flavors/base/index',
   'pills/flavors/listbox-of-pill-options/index',
