fixed safari docked composer body bug (#2102)
* fixed safari docked composer body bug

* update to docked composer body flex value

--- a/packages/design-system/ui/components/docked-composer/_index.scss
+++ b/packages/design-system/ui/components/docked-composer/_index.scss
@@ -104,7 +104,7 @@
    */
   &__body {
     display: flex;
-    flex: 1 1 0%;
+    flex: 1 0 auto;
     flex-direction: column;
     overflow: auto;
   }
