Scope is-active to vertical navigation (#2123)

--- a/packages/design-system/ui/components/vertical-navigation/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/vertical-navigation/flavors/base/_index.scss
@@ -129,7 +129,7 @@
  * @restrict .slds-nav-vertical__item
  * @modifier
  */
-.slds-is-active {
+.slds-nav-vertical__item.slds-is-active {
   color: $color-text-link;
 
   .slds-nav-vertical__action {
