Chore: Force word breaking on cell-wrap utility (#2114)

--- a/packages/design-system/ui/components/data-tables/_index.scss
+++ b/packages/design-system/ui/components/data-tables/_index.scss
@@ -90,6 +90,8 @@
    */
   .slds-cell-wrap {
     white-space: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 
   // Reduce cell to the width of its content, if space is available
