--- a/packages/design-system/ui/components/feeds/flavors/feed-list/_index.scss
+++ b/packages/design-system/ui/components/feeds/flavors/feed-list/_index.scss
@@ -52,11 +52,7 @@
     padding: $spacing-x-small 0;
 
     @include mq-medium-min {
-      padding: $spacing-medium 0;
-    }
-
-    @include mq-large-min {
-      padding: $spacing-large 0;
+      padding: $spacing-small 0;
     }
   }
 }
