Bug: Fix native clear button for IE (#2115)
* Bug: Fix native clear button for IE

* scoped to type search

* Release notes

--- a/packages/design-system/ui/components/input/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/input/flavors/base/_index.scss
@@ -54,6 +54,12 @@
     @include button-interactions;
   }
 
+  &[type="search"]::-ms-clear {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
   /**
    * Removes aesthetic nature from an input
    *
