--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -85,6 +85,10 @@
   // Picklist
   'picklist/index',
 
+  // Combobox
+  'combobox/doc',
+  'combobox/flavors/base/index',
+
   // Datepicker
   'datepickers/index',
   'datepickers/flavors/time/index',
@@ -126,7 +130,6 @@
 
   // Pills
   'pills/flavors/base/index',
-  'pills/flavors/listbox-of-pill-options/index',
 
   // Process
   'process/flavors/wizard/index',
