--- a/packages/design-system/ui/components/lookups/_index.scss
+++ b/packages/design-system/ui/components/lookups/_index.scss
@@ -161,7 +161,7 @@
     }
 
     // Icon in results, here so it doesn't need to be repeated in DOM
-    .slds-icon {
+    .slds-media__figure {
       margin-right: $spacing-x-small;
       margin-top: $spacing-xx-small;
     }
