Docs: Fix typo in file selector documentation

--- a/packages/design-system/ui/components/file-selector/_index.scss
+++ b/packages/design-system/ui/components/file-selector/_index.scss
@@ -2,7 +2,7 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @summary The File selector component allows the user to select files(s) from a user’s file system. Either natively using an file input or drag and drop.
+ * @summary The File selector component allows the user to select file(s) from a user’s file system. Either natively using an file input or drag and drop.
  *
  * @base
  * @name file-selector
