Fix: waffle icon display

--- a/packages/design-system/ui/components/dynamic-icons/flavors/waffle/_index.scss
+++ b/packages/design-system/ui/components/dynamic-icons/flavors/waffle/_index.scss
@@ -59,6 +59,7 @@
 .slds-icon-waffle {
   @include square(rem(21px));
   position: relative;
+  display: block;
   cursor: pointer;
 
   [class*="slds-r"] {
