fix(pills): Avatars in pills should be x-small (#2201)
* Chore - Avatars in pills should be x-small by nature

This is for the LGC team

* Remove duplicate classname

--- a/packages/design-system/ui/components/pills/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/pills/flavors/base/_index.scss
@@ -148,8 +148,10 @@
     @include square($square-icon-x-small-boundary);
     margin-right: $spacing-xx-small;
 
-    .slds-icon {
+    .slds-icon,
+    .slds-avatar {
       @include square($square-icon-x-small-boundary);
+      font-size: $font-size-heading-xx-small;
     }
 
     ~ .slds-pill__action {
